Bug 248217 - Embedded (attached, encapsulated) emails: Formatting broken with kontact-mobile
Summary: Embedded (attached, encapsulated) emails: Formatting broken with kontact-mobile
Status: VERIFIED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 256000 256192 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-18 09:46 UTC by Bernhard E. Reiter
Modified: 2011-01-19 11:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot Kontact-mobile encapsulated message format broken (n900 tag 20100813-1) (77.33 KB, image/png)
2010-08-18 09:46 UTC, Bernhard E. Reiter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard E. Reiter 2010-08-18 09:46:04 UTC
Created attachment 50679 [details]
Screenshot Kontact-mobile encapsulated message format broken (n900 tag 20100813-1)

N900 Version: 4:4.5~20100813.1163254-1maemo1.1164259

Source: qt4-experimental
Version: 4.7.0~git20100816-0maemo1
Comment 1 Volker Krause 2010-11-26 10:38:10 UTC
*** Bug 256192 has been marked as a duplicate of this bug. ***
Comment 2 Volker Krause 2010-11-26 10:38:24 UTC
*** Bug 256000 has been marked as a duplicate of this bug. ***
Comment 3 Tobias Koenig 2010-12-20 13:26:18 UTC
SVN commit 1208036 by tokoe:

Use a simplified header style for mobile

The mobile header style uses now <table> for layouting
the headers and bgcolor to color them. The <div> based approach
doesn't work out with QTextBrowser. No nested messages are
displayed correctly as well.

BUG: 248217


 M  +31 -45    headerstyle.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1208036