Use a simplified header style for mobile

The mobile header style uses now <table> for layouting
the headers and bgcolor to color them. The <div> based approach
doesn't work out with QTextBrowser. No nested messages are
displayed correctly as well.

BUG: 248217

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1208036